--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,25 @@
 version: '2'
 services:
   servbuild:
-    image: ubuntu:latest
+    image: ubuntu:20.04
 #    links:
 #      - php
-#    volumes:
-#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    volumes:
+      - /tmp:./target/hello-1.0.war
 #    volumes_from:
 #      - php
   servprod:
-    image: tomcat:9.0
+    image: tomcat:9.0.20-jre8-alpine
 #    environment:
 #     - TYPO3_CONTEXT=Development/Docker
 #    links:
 #      - db
 #      - redis
     ports:
-      - "8080:80"
-#    volumes:
-#      - ./htdocs:/var/lib/tomcat9/webapps/
+      - "8080:8080"
+    volumes:
+      - /tmp:/usr/local/tomcat/webapps/
 ---
+
+
+
